# ros4pro

./: .bashrc  .gitignore  .rosinstall  CMakeLists.txt  README.md  package.xml
checkpoints/: README.md
config/: pic.json
data/: README.md
launch/: manipulate.launch  map_saver.launch
perception/: README.md  img  main.py  requirements.txt  setup.py
perception/src/: detection.py  learning.py  vis.py
scripts/: call_vision_predict_example.py
src/: display.py  manipulate.py  navigate_integrate.py
src/nodes/: joint_state_publisher.py  learn.py  manipulate.py  navigate_integrate.py  navigate_waypoints.py  navigate_waypoints_door_start.py  navigation_scenario.py  turtlebot3_labyrinthe.py  vision_server.py
src/ros4pro/: transformations.py
src/ros4pro/simulation/: camera.py  gripper.py
src/ros4pro/vision/: detection.py  misc.py  vis.py
src/vision/: vision_server.py
srv/: VisionPredict.srv
tp/: 1_INTRODUCTION.md  2_NAVIGATION.md  3_MANIPULATION.md  4_PERCEPTION.md  5_INTEGRATION.md  README.md
tp/files/: wpa_supplicant.conf
