<?xml version="1.0"?>
<package format="2">
  <name>ros4pro</name>
  <version>0.0.1</version>
  <description>Workshop ROS4PRO with Sawyer and Turtlebot</description>
  <maintainer email="yoan.mollard@bordeaux-inp.fr">Yoan Mollard</maintainer>
  <license>GPLv3</license>
  <url type="website">http://ros4.pro</url>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
